<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9FE1A2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="348dp"
        android:layout_height="85dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="cursive"
        android:text="@string/grade_calculator"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textSize="40sp" />


    <Button
        android:id="@+id/Calculate"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="440dp"
        android:background="#FFFFFF"
        android:fontFamily="serif"
        android:text="@string/calculate"
        android:textColor="#DA9EB3"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/quizes"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="100dp"
        android:background="#E1A1BF"
        android:ems="10"
        android:hint="@string/quizes_15"
        android:inputType="textPersonName"
        android:textSize="23sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Homework"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="190dp"
        android:background="#E1A1BF "
        android:ems="10"
        android:hint="@string/homework_25"
        android:inputType="textPersonName"
        android:textSize="23sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/MidTerms"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="280dp"
        android:background="#E1A1BF"
        android:ems="10"
        android:hint="@string/mid_terms_30"
        android:inputType="textPersonName"
        android:textSize="23sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Final"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="370dp"
        android:background="#E1A1BF"
        android:ems="10"
        android:hint="@string/final_30"
        android:inputType="textPersonName"
        android:textSize="23sp"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/Agrade"
        android:layout_width="58dp"
        android:layout_height="84dp"
        app:srcCompat="@drawable/A"
        android:layout_marginTop="130dp"
       android:layout_marginStart="20dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/cgrade"
        android:layout_width="99dp"
        android:layout_height="100dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="230dp"
        app:srcCompat="@drawable/C"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/bgrade"
        android:layout_width="95dp"
        android:layout_height="72dp"
        app:srcCompat="@drawable/B"
        android:layout_marginTop="200dp"
        android:layout_marginStart="310dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/dgrade"
        android:layout_width="76dp"
        android:layout_height="54dp"
        app:srcCompat="@drawable/D"
        android:layout_marginStart="320dp"
        android:layout_marginTop="320dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/fgrade"
        android:layout_width="73dp"
        android:layout_height="67dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="350dp"
        app:srcCompat="@drawable/F"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/restart"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="600dp"
        android:background="#FFFFFF"
        android:text="@string/restart"
        android:textColor="#DA9EB3"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewx"
        android:layout_width="115dp"
        android:layout_height="37dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="550dp"
        android:text="@string/the_grade"
        android:textSize="20sp" />

</RelativeLayout>